--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Learning Git Commands</h1>
-    <p>Hey mansi learning github command</p>
+    <p>This is work done in feature1</p>
+    
 </body>
 </html>
